--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -30,6 +30,7 @@ jobs:
 
             - name: SonarCloud Scan
               uses: SonarSource/sonarcloud-github-action@master
+              if: github.event_name != 'pull_request'
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
