--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -23,13 +23,13 @@ jobs:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
               with:
-                  node-version: "20.10.0"
+                  node-version-file: ".nvmrc"
                   cache: "npm"
             - run: npm ci
             - run: npm run test:ci
 
             - name: SonarCloud Scan
-              uses: SonarSource/sonarcloud-github-action@master
+              uses: SonarSource/sonarqube-scan-action@v5.3.1
               if: github.event_name != 'pull_request'
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
