--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "pretty": "prettier --write '**/*.{ts,js}'",
         "test": "jest",
         "test:ci": "jest --collectCoverage",
-        "swagger": "npx ts-node ./api/bot/swagger.ts",
+        "swagger": "tsx ./api/bot/swagger.ts",
         "init": "tsx ./scripts/initDev.ts",
         "migrations": "npx drizzle-kit generate"
     },
@@ -53,7 +53,6 @@
         "jimp": "^1.6.0",
         "local-devices": "^4.0.0",
         "luci-rpc": "^1.0.5",
-        "luxon": "^3.7.2",
         "memoizee": "^0.4.17",
         "mqtt": "^5.14.1",
         "node-fetch": "^3.3.2",
@@ -66,11 +65,9 @@
         "prom-client": "^15.1.3",
         "reflect-metadata": "^0.2.2",
         "rm": "^0.1.8",
-        "rrule": "^2.8.1",
         "split2": "^4.2.0",
         "swagger-ui-express": "^5.0.1",
         "tmp-promise": "^3.0.3",
-        "ts-node": "^10.9.2",
         "winston": "^3.17.0",
         "winston-daily-rotate-file": "^5.0.0",
         "wol": "^1.0.7"
@@ -87,7 +84,6 @@
         "@types/express-prometheus-middleware": "^1.2.3",
         "@types/fs-extra": "^11.0.4",
         "@types/jest": "^29.5.14",
-        "@types/luxon": "^3.7.1",
         "@types/memoizee": "^0.4.12",
         "@types/node": "^22.18.1",
         "@types/node-fetch": "^2.6.13",
